# profile.mobile.apps.native.share-panel

./: .cproject  .project  CMakeLists.txt  Doxyfile  org.tizen.share-panel-1.0.0-arm-debug.tpk  org.tizen.share-panel-1.0.0-arm.tpk  org.tizen.share-panel-1.0.0-i386-debug.tpk  org.tizen.share-panel-1.0.0-i386.tpk  org.tizen.share-panel.efl  org.tizen.share-panel.manifest  org.tizen.share-panel.xml  project_def.prop  share-panel.pc.in  tizen-manifest.xml
CMake/: CMakeLists.txt
CMake/res/: CMakeLists.txt
CMake/res/edje/: CMakeLists.txt
CMake/res/po/: CMakeLists.txt
doc/: share_panel_doc.h
inc/: conf.h  grid.h  index.h  list.h  log.h  page.h  scroller.h  share_panel.h  share_panel_internal.h  ui_manager.h  utils.h
include/: conf.h  list.h  page.h  scroller.h  share_panel.h  share_panel_internal.h  ui_manager.h
packaging/: org.tizen.share-panel.spec  share-panel.spec
po/: CMakeLists.txt  bn.po  da.po  es_ES.po  et.po  fa.po  fi.po  gl.po  gu.po  he.po  hi.po  hr.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  mk.po  ml.po  ro.po  ru_RU.po  sk.po  sr.po  ta.po  uk.po  ur.po  zh_HK.po
res/edje/: CMakeLists.txt  item.edc  layout.edc  page.edc
res/po/: ar.po  az.po  bg.po  ca.po  cs.po  de.po  el_GR.po  en_US.po  es_US.po  eu.po  fr_CA.po  ga.po  hu.po  hy.po  kn.po  lt.po  lv.po  nb.po  nl.po  pl.po  pt_BR.po  pt_PT.po  si.po  sl.po  sv.po  te.po  th.po  tr_TR.po  uz.po  zh_CN.po  zh_TW.po
src/: grid.c  index.c  list.c  page.c  scroller.c  share_panel.c  ui_manager.c  utils.c
